src/main/java/com/example/sampleapp/demo/error/ErrorResponseBody.java
package com.example.sampleapp.demo.error;

public record ErrorResponseBody(String message) {
}
